--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-*{
+* {
   font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,11 +13,11 @@ body{
   background: #131313;
 }
 
-.container{
+.container {
   position: relative;
 }
 
-.container .card{
+.container .card {
   position: relative;
   width: 320px;
   height: 450px;
@@ -26,23 +26,23 @@ body{
   overflow: hidden;
 }
 
-.container .card:before{
+.container .card:before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #9bdc28;
+  background: #436a3b;
   clip-path: circle(150px at 80% 20%);
   transition: 1s ease-in-out;
 }
 
-.container .card:hover:before{
+.container .card:hover:before {
   clip-path: circle(300px at 80% -20%);
 }
 
-.container .card:after{
+.container .card:after {
   content: '//////';
   position: absolute;
   top: 30%;
@@ -50,12 +50,12 @@ body{
   font-size: 12em;
   font-weight: 800;
   font-style: italic;
-  color: rgba(255,255,25,0.05)
+  color: rgba(255, 255, 25, 0.05)
 }
 
-.container .card .imgBx{
+.container .card .imgBx {
   position: absolute;
-  top: 30%;
+  top: 25%;
   transform: translateY(-30%);
   z-index: 10000;
   width: 100%;
@@ -63,21 +63,23 @@ body{
   transition: 1s;
 }
 
-.container .card:hover .imgBx{
-  top: 0%;
-  transform: translateY(-10%);
-    
+.container .card:hover .imgBx {
+  top: 1%;
+  transform: translateY(-7%);
+
 }
 
-.container .card .imgBx img{
+.container .card .imgBx img {
   position: absolute;
-  top: 25%;
-  left: 45%;
-  width: 150px;
+  top: 10%;
+  left: 35%;
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
   border-radius: 10px;
 }
 
-.container .card .contentBx{
+.container .card .contentBx {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -87,43 +89,46 @@ body{
   z-index: 10;
 }
 
-.container .card:hover .contentBx{
-  height: 210px;
+.container .card:hover .contentBx {
+  height: 190px;
 }
 
-.container .card .contentBx h2{
+.container .card .contentBx h2 {
   position: relative;
   font-weight: 600;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   color: #fff;
   margin: 0;
 }
 
 
-.container .card .contentBx .size, .container .card .contentBx .color {
+.container .card .contentBx .links_class,
+.container .card .contentBx .color {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 8px 20px;
-  transition: 0.5s;opacity: 0;
+  transition: 0.5s;
+  opacity: 0;
   visibility: hidden;
   padding-top: 0;
   padding-bottom: 0;
 }
 
-.container .card:hover .contentBx .size{
+.container .card:hover .contentBx .links_class {
   opacity: 1;
   visibility: visible;
   transition-delay: 0.5s;
 }
 
-.container .card:hover .contentBx .color{
+.container .card:hover .contentBx .color {
   opacity: 1;
   visibility: visible;
   transition-delay: 0.6s;
 }
 
-.container .card .contentBx .size h3, .container .card .contentBx .color h3{
+.container .card .contentBx .links_class h3,
+.container .card .contentBx .color h3 {
   color: #fff;
   font-weight: 300;
   font-size: 14px;
@@ -132,14 +137,13 @@ body{
   margin-right: 10px;
 }
 
-.container .card .contentBx .size span{
+.container .card .contentBx .links_class span {
   width: 26px;
   height: 26px;
   text-align: center;
   line-height: 26px;
   font-size: 14px;
   display: inline-block;
-  color: #111;
   margin: 0 5px;
   transition: 0.5s;
   color: #111;
@@ -147,13 +151,12 @@ body{
   cursor: pointer;
 }
 
-.container .card .contentBx .size span:hover{
-  /* background: #9bdc28; */
+.container .card .contentBx .links_class span:hover {
   width: 50px;
   transform: scale(1.5)
 }
 
-.container .card .contentBx .color span{
+.container .card .contentBx .color span {
   width: 20px;
   height: 20px;
   background: #ff0;
@@ -161,37 +164,53 @@ body{
   margin: 0 5px;
   cursor: pointer;
 }
+.container .support {
+  display: flex;
+  margin-top: 5px;
+  justify-content: center;
 
-.container .card .contentBx .color span:nth-child(2){
-  background: #9bdc28;
+  color: white;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-.container .card .contentBx .color span:nth-child(3){
-  background: #03a9f4;
+
+.d4 {
+  background: #F15B42;
+  border-radius: 5px;
+  height: 200%;
 }
 
-.container .card .contentBx .color span:nth-child(4){
-  background: #e91e63;
+.d4 form {
+  border-radius: 5px;
+  background: #F9F0DA;
+  border-bottom: 4px solid #be290e;
 }
 
-.container .card .contentBx a .likeClass{
-  display: inline-block;
-  padding: 10px 20px;
-  background: #fff;
-  border-radius: 4px;
-  margin-top: 10px;
-  text-decoration: none;
-  font-weight: 600;
-  color: #111;
-  opacity: 0;
-  transform: translateY(50px);
-  transition: 0.5s;
-  margin-top: 0;
+.d4 input,
+.d4 button {
+  border: none;
+  outline: none;
+  background: transparent;
 }
 
-.container .card:hover .contentBx a .likeClass{
-  opacity: 1;
-  transform: translateY(0px);
-  transition-delay: 0.75s;
-  
+.d4 input {
+  height: 42px;
+  width: 350px;
+  padding-left: 15px;
+}
+
+.d4 button {
+  height: 42px;
+  width: 42px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+
+.d4 button:before {
+  content: "➡️";
+  font-size: 20px;
+  color: #be290e;
 }
