--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 
       <div class="contentBx">
         <h2>{{data[1]}}</h2>
-        <div class="size">
+        <div class="links_class">
           <h3>links:</h3>
           {{data[2] | safe}}
         </div>
