--- a/templates/start.html
+++ b/templates/start.html
@@ -8,14 +8,18 @@
     <script src="{{ url_for('static', filename='scripts/app.js')}}"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NKR | CARDS</title>
+    <title>400 | CARDS</title>
 </head>
 
 <body style="overflow: hidden;">
     <div class="container">
+        <div class="logo">
+            <h2>400 | CARDS</h2>
+        </div>
+        
         <div class="d4">
             <form>
-                <input type="text" placeholder="Введите хэш..." id="input_hash">
+                <input type="text" placeholder="Enter user hash..." id="input_hash">
                 <button type="submit" onclick="open_hash()"></button>
             </form>
         </div>
