--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -222,7 +222,7 @@ body {
   padding: 10px 30px;
   letter-spacing: 2px;
   font-size: 20px;
-  color: wheat;
+  color: white;
 }
 
 .container .logo{
