--- a/templates/start.html
+++ b/templates/start.html
@@ -20,7 +20,7 @@
         <div class="d4">
             <form>
                 <input type="text" placeholder="Enter user hash..." id="input_hash">
-                <button type="submit" onclick="open_hash()"></button>
+                <button type="button" onclick="open_hash()"></button>
             </form>
         </div>
 
