--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,11 @@
   <title>400 | CARDS</title>
 </head>
 
-<body>
+<body style="overflow: hidden;">
+  <div class="name_hyperlink">
+    <a>400 | CARDS</a>
+  </div>
+  
   <div class="container">
     <div class="card">
 
@@ -25,10 +29,6 @@
           {{data[2] | safe}}
         </div>
       </div>
-    </div>
-
-    <div class="support">
-      <span class="link" onclick="get_hash()">Поддержка</span>
     </div>
 
   </div>
