--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -165,17 +165,6 @@ body {
   cursor: pointer;
 }
 
-.container .support {
-  display: flex;
-  margin-top: 5px;
-  justify-content: center;
-
-  color: white;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-
 .container .d4{
   width: 80vw;
   height: 50%;
@@ -232,4 +221,16 @@ body {
   letter-spacing: 2px;
   margin-top: -20vh;
   width: 100%;
+}
+
+.name_hyperlink {
+  position: absolute;
+  letter-spacing: 2px;
+  margin-top: -65vh;
+  color: white;
+
+  background: gray;
+  border-radius: 10px;
+  padding: 5px 15px;
+  font-size: 15px;
 }
